# react-django-sns-rest-framework-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api_dm/: serializers.py  urls.py  views.py
api_user/: serializers.py  urls.py  views.py
core/: admin.py  cousompermissions.py  models.py
core/migrations/: 0001_initial.py
sns/: settings.py  urls.py
